tests/suite/snapshots/suite__check__tests__check__bad-nested-array.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-nested-array.xi:2:5]
   │
 2 │     i:bool[][] = {{}, {1}}
   ·     ─────┬────  
   ·          ╰────── Expected bool[][] but found int[][]
───╯

